# mongo-juice

./: .gitlab-ci.yml  CMakeLists.txt  README.md  quick-start  start
demo/: mongo-agent.cpp  super_agent.cpp
include/: Mongo_agent.hpp  count  count-mongo-files-in-collection.cpp  drop_collection.hpp  insert_many.hpp  mongo_agent_nice.hpp  mongo_test.hpp
tests/: mongo_agent_nice.cpp  wip_cmakelist_tests.txt
